--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 streamlit>=1.26.0
+streamlit-extras==0.4.0
+plotly==5.14.1
+millify==0.1.1
+openai==1.13.3
+pandasai==2.0.2
+pygwalker==0.4.6
+polars==0.20.13
